--- a/style.css
+++ b/style.css
@@ -6,8 +6,21 @@ body {
   align-items: center;
 }
 
+.title {
+  /* background-color: #6e1100; */
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  padding: 0 0 3em 0;
+}
+
+.title h1 {
+  font-size: 4em;
+  color: rgb(27, 134, 167);
+}
+
 .content {
-  width: 25%;
+  width: 100%;
   height: 500px;
   background-color: #557b84;
   text-align: center;
