--- a/style.css
+++ b/style.css
@@ -4,6 +4,7 @@ body {
   width: 100%;
   justify-content: center;
   align-items: center;
+  overflow: hidden;
 }
 
 .title {
@@ -17,15 +18,18 @@ body {
 .title h1 {
   font-size: 4em;
   color: rgb(27, 134, 167);
+  font-family:'Courier New', Courier, monospace;
+  font-weight: bold;
 }
 
 .content {
   width: 100%;
-  height: 500px;
+  /* height: 300px; */
+  font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
   background-color: #557b84;
   text-align: center;
-  padding-top: 20px;
-  
+  padding-top: 40px;
+  padding-bottom: 80px;
 }
 
 #cityInput {
